Style: remove padding top for the first element avoiding extra padding alongside fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,7 @@ nav ul {
 /* hero section */
 
 #hero-outer {
+    padding-top: 0;
     overflow: hidden;
 }
 
